# vision

./: .gitignore  .travis.yml  ArucoDetector_8hpp_source.html  ArucoDetector__ParamsParser_8h_source.html  CMakeLists.txt  CONTRIBUTING.md  ColorRegionDetector_8hpp_source.html  ColorRegionDetector__ParamsParser_8h_source.html  DnnDetector_8hpp_source.html  DnnDetector__ParamsParser_8h_source.html  HaarDetector_8hpp_source.html  HaarDetector__ParamsParser_8h_source.html  IDetector_8hpp_source.html  KinectFusionImpl_8hpp_source.html  KinectFusion_8hpp_source.html  LineCallbackPort_8hpp_source.html  PointAtObjectServer_8hpp_source.html  QrDetector_8hpp_source.html  QrDetector__ParamsParser_8h_source.html  README.md  RgbDetection_8hpp_source.html  RgbdDetection_8hpp_source.html  SceneReconstruction_8hpp_source.html  SegmentorThread_8hpp_source.html  SharedArea_8hpp_source.html  TravisLib_8hpp_source.html  VoxelOccupancyDetection_8hpp_source.html  YarpCloudUtils-pcl-impl_8hpp_source.html  YarpCloudUtils-pcl-inst_8hpp_source.html  YarpCloudUtils-pcl-traits_8hpp_source.html  YarpCloudUtils-pcl_8hpp_source.html  YarpCloudUtils_8hpp_source.html  YarpCropCallback_8hpp_source.html  annotated.html  citelist.html  classArucoDetector-members.html  classArucoDetector.html  classArucoDetector__ParamsParser-members.html  classArucoDetector__ParamsParser.html  classColorRegionDetector-members.html  (+222 more)
bindings/: CMakeLists.txt  roboticslab_vision.i
bindings/python/: CMakeLists.txt
examples/cpp/: CMakeLists.txt
libraries/: CMakeLists.txt  Detector.hpp
libraries/ColorDebug/: ColorDebug.hpp
libraries/ColorRegionDetector/: CMakeLists.txt  ColorRegionDetector.cpp  ColorRegionDetector.hpp
libraries/HaarDetector/: CMakeLists.txt  HaarDetector.cpp  HaarDetector.hpp
libraries/HeadYarp/: CMakeLists.txt
libraries/TravisLib/: CMakeLists.txt  TravisLib.cpp  TravisLib.hpp
libraries/VisionIDL/: CMakeLists.txt  vision.thrift
libraries/VisionYarp/: CMakeLists.txt
libraries/YarpCloudUtils/: CMakeLists.txt  LogComponent.cpp  LogComponent.hpp  README.md  SurfaceMeshingOptions.cpp  SurfaceMeshingOptions.hpp  YarpCloudUtils-inst.hpp  YarpCloudUtils-pcl-impl.hpp  YarpCloudUtils-pcl-inst.hpp  YarpCloudUtils-pcl-traits.hpp  YarpCloudUtils-pcl.cpp  YarpCloudUtils-pcl.hpp  YarpCloudUtils-ply-export.cpp  YarpCloudUtils-ply-import.cpp  YarpCloudUtils-tinyply.cpp  YarpCloudUtils-traits.hpp  YarpCloudUtils.cpp  YarpCloudUtils.hpp  tinyply.h
libraries/YarpCropCallback/: CMakeLists.txt  YarpCropCallback.cpp  YarpCropCallback.hpp
libraries/YarpPlugins/: CMakeLists.txt  IDetector.hpp
models/: CMakeLists.txt
programs/: CMakeLists.txt
programs/colorRegionDetection/: CMakeLists.txt  ColorRegionDetection.cpp  ColorRegionDetection.hpp  SegmentorThread.cpp  SegmentorThread.hpp  TravisLib.cpp  TravisLib.hpp  main.cpp
programs/colorRegionDetection2D/: CMakeLists.txt  ColorRegionDetection2D.cpp  ColorRegionDetection2D.hpp  SegmentorThread.cpp  SegmentorThread.hpp  VisionSegmentor.cpp  VisionSegmentor.hpp  main.cpp
programs/cv1/: CMakeLists.txt  Cv1.cpp  Cv1.hpp  SegmentorThread.cpp  SegmentorThread.hpp  TinyMath.cpp  TinyMath.hpp  TravisLib.cpp  TravisLib.hpp  main.cpp
programs/cv1ToRoot/: CMakeLists.txt  Cv1ToRoot.cpp  Cv1ToRoot.hpp  PremultPorts.cpp  PremultPorts.hpp  main.cpp
programs/cvFaces/: CMakeLists.txt  CvFaces.cpp  CvFaces.hpp  SegmentorThread.cpp  SegmentorThread.hpp  main.cpp
programs/dm1/: CMakeLists.txt  Dm1.cpp  Dm1.hpp  StateMachine.cpp  StateMachine.hpp  main.cpp
programs/ec1/: CMakeLists.txt  Ec1.cpp  Ec1.hpp  main.cpp
programs/haarDetection/: CMakeLists.txt  CvFaces.hpp  HaarDetection.cpp  HaarDetection.hpp  SegmentorThread.cpp  SegmentorThread.hpp  main.cpp
programs/haarDetection2D/: CMakeLists.txt  HaarDetection2D.cpp  HaarDetection2D.hpp  SegmentorThread.cpp  SegmentorThread.hpp  SwitchDetection2D.hpp  main.cpp
programs/kinectPxToReal/: CMakeLists.txt  CallbackPort.cpp  CallbackPort.hpp  KinectPxToReal.cpp  KinectPxToReal.hpp  main.cpp
programs/launchHead/: LaunchHead.hpp  main.cpp
programs/multipleDump/: CMakeLists.txt  MultipleDump.cpp  MultipleDump.hpp  MultipleDumpThread.cpp  MultipleDumpThread.hpp  main.cpp
programs/opencvDnnDetection/: CMakeLists.txt  OpencvDnnDetection.cpp  OpencvDnnDetection.hpp  SegmentorThread.cpp  SegmentorThread.hpp  main.cpp
programs/opencvDnnObjectDetection2D/: CMakeLists.txt  OpencvDnnObjectDetection2D.cpp  OpencvDnnObjectDetection2D.hpp  SegmentorThread.cpp  SegmentorThread.hpp  main.cpp
programs/pointAtObjectServer/: CMakeLists.txt  LineCallbackPort.cpp  LineCallbackPort.hpp  PointAtObjectServer.cpp  PointAtObjectServer.hpp  SharedArea.cpp  SharedArea.hpp  main.cpp  vtkTimerCallback.cpp  vtkTimerCallback.hpp
programs/rgbDetection/: CMakeLists.txt  DetectorThread.cpp  DetectorThread.hpp  RgbDetection.cpp  RgbDetection.hpp  SwitchDetection2D.hpp  main.cpp
programs/rgbdDetection/: CMakeLists.txt  RgbdDetection.cpp  RgbdDetection.hpp  SegmentorThread.cpp  SegmentorThread.hpp  SwitchDetection.cpp  main.cpp
programs/sceneReconstruction/: CMakeLists.txt  ColoredKinFu.cpp  DynaFu.cpp  KinFu.cpp  KinFuLargeScale.cpp  KinectFusion.hpp  KinectFusionAdapter.hpp  KinectFusionImpl.hpp  LogComponent.cpp  LogComponent.hpp  SceneReconstruction.cpp  SceneReconstruction.hpp  main.cpp
programs/speechRecognition/: CMakeLists.txt  speechRecognition.py
programs/speechRecognition1/: CMakeLists.txt  speechRecognition1  speechRecognition1.py  sr1
programs/sr1/: CMakeLists.txt  sr1  sr1.py
programs/switchDetection/: CMakeLists.txt  SegmentorThread.cpp  SegmentorThread.hpp  SwitchDetection.cpp  SwitchDetection.hpp  main.cpp
programs/switchDetection2D/: CMakeLists.txt  ColorRegionDetection2D.cpp  ColorRegionDetection2D.hpp  ColorRegionDetector.cpp  ColorRegionDetector.hpp  Detector.cpp  Detector.hpp  main.cpp  (+21 more)
share/: CMakeLists.txt
tests/: CMakeLists.txt  testArucoDetector.cpp  testColorRegionDetector.cpp  testDnnDetector.cpp  testHaarDetector.cpp  testOpencvDnnDetector.cpp  testQRDetector.cpp  testQrDetector.cpp  testYarpCloudUtils.cpp
(+429 files in other folders)
