# Copyright: Universidad Carlos III de Madrid (C) 2015
# Authors: Juan G. Victores

add_subdirectory(kinectPxToReal)
add_subdirectory(pointAtObjectServer)
add_subdirectory(sceneReconstruction)
add_subdirectory(switchDetection)
add_subdirectory(switchDetection2D)
add_subdirectory(tensorflowDetection2D)
add_subdirectory(voxelOccupancyDetection)
