# Copyright: Universidad Carlos III de Madrid (C) 2015
# Authors: Juan G. Victores

add_subdirectory(pointAtObjectServer)
add_subdirectory(sceneReconstruction)
add_subdirectory(rgbDetection)
add_subdirectory(rgbdDetection)
add_subdirectory(tensorflowDetection2D)
add_subdirectory(voxelOccupancyDetection)
add_subdirectory(opencvDnnObjectDetection2D)
